<resources>
    <string name="app_name">Teaclopedia</string>
    <string name="what_is_puerh_tea">Pu-erh tea, known as “black tea” in the Far East part of the world, originates from the Yunnan province of China and is named after the market town in which it was first developed. Pu-erh tea is post-fermented, which means that the tea leaves go through a microbial fermentation process after they have been dried and rolled, causing the leaves to darken and change in flavor. This process allows the teas to not only improve with age like a fine wine, but many pu-erhs are able to retain their freshness for up to fifty years! Pu-erh teas can be found in compressed brick form or in loose leaf form and can be made from both green and black tea leaves</string>
    <string name="what_is_puerh_tea_2">Puerh tea is made from a larger leaf strain of camellia sinensis called Dayeh, which are ancient trees with mature leaves that are said to be between 500 and 1000 years old. These trees are usually grown in temperate regions and although they can be harvested year-round, the opportune time to harvest is in mid-spring. Various conditions and environmental factors can impact the flavor profile of pu-erh, resulting in a rich experience for the tea drinker\'s palate of this bold tea that can be smooth, fruity, peaty, grassy, musky, herbal and earthy.</string>
    <string name="pt_history_1">Pu-erh tea can be traced back to the Yunnan Province during the Eastern Han Dynasty. Trade in Pu-erh tea began in the Tang Dynasty, became famous during the Ming Dynasty and was popularized in the Qing Dynasty.</string>
    <string name="pt_history_2">Pu-erh was transported by mules and horses in long caravans along established routes that became known as the Tea Horse Roads. Traders would barter for tea in the markets of Pu-erh County and then hire the caravans to carry the tea back to their respective homes.</string>
    <string name="pt_history_3">The increasing demand for a tea that could be easily transported and did not spoil on long journeys sent suppliers on a frenzy to come up with ways to preserve the tea. It was found that with the fermentation of the leaves, the tea not only kept fresh but it actually improved with age. People soon discovered that pu-erh also helped with digestion, provided other nutrients to their diet, and because it was so affordable, it quickly became a popular household amenity. Pu-erh tea was highly prized and it became a powerful tool for bartering amongst traveling merchants.</string>
    <string name="pt_today_1">Today, pu-erh continues to be regarded as a highly prized commodity. Even in modern society, a well-preserved pu-erh still maintains its value and remains a household treat.</string>
    <string name="pt_today_2">In western society, the popularity of pu-erh tea is only just now being introduced to the mainstream population of tea drinkers, propagated by new hype generated by mass-media about its many salubrious effects. It is only a matter of time before the beauty and benefits of pu-erh tea become commonplace household knowledge.</string>
    <string name="what_is_oolong_tea">Oolong (Wu-lung) tea originates from China and is actually transliterated from two words meaning “black” and “dragon” in English. Besides its inherent meaning, the two words describe the shape of the oolong leaves in their novel state. Oolong tea goes through a unique semi-oxidization process that ranges from 1% - 99%. Shortly after picking, the leaves are withered and semi-oxidized in the sun then shade dried. After this, they are basket-tossed to break down the cells on the surface of the leaves and wok-fired, which halts the oxidization process. Heating methods include masterfully hand roasting the tea leaves in multiple steps which generally take place throughout the night. Oolongs are often processed over charcoal or wood which gives a unique flavor to the various finishing styles. Finally, the leaves are curled or rolled into crispy shapes that resemble tiny black dragons, hence the descriptive name. Because oolong tea leaves are more mature, they are harvested later in the spring than green or white teas – usually from late April to early May.</string>
    <string name="ot_history_1">There are numerous theories about how oolong tea came to be.</string>
    <string name="ot_history_2">The first theory, called the “tribute tea” theory, claims that oolong tea stems directly from the Dragon-Phoenix Cake tribute tea, which was made up of two different tea types: “Dragon” (Long) and “Phoenix” (Fong), produced in the Beiyuan tea gardens. When loose-leaf tea came into play as the new way of serving tributes, the name was changed to “Black Dragon” or oolong tea, to associate with the dark, wiry leaves that resulted from this form of processing.</string>
    <string name="ot_history_3">The second theory comes from the “Wuyi” theory, which claims that oolong tea was originally named after the Wuyi mountain region, where it was first documented in poems from the Ming Dynasty.</string>
    <string name="ot_history_4">The third theory comes from the “Anxi” theory, which claims that oolong tea was first discovered in the Anxi region of the Fujian province when a man named Sulong, Wulong or Wuliang, accidentally allowed his tea leaves to oxidize after being distracted during the harvest.</string>
    <string name="ot_history_5">Oolong teas reached the height of their popularity during the Qing dynasty, with the introduction of Ti Quan Yin, or Iron Goddess of Mercy, to the emperor Qian Lung, who was so enamored by the beauty of the tea that word of it quickly spread. This was also about the time that the gongfu ceremonial method of serving tea came about and played an instrumental role in political and modern warfare during that period. Oolong tea was usually served out of special handmade teapots made out of purple clay called Yixing teapots. These were designed to be used with one type of tea only in order to season the teapot and avoid cross-contamination of flavors.</string>
    <string name="ot_today_1">By the mid-1900s, the popularity of oolong teas had grown so much that oolong tea production began in Taiwan. Because of the variable weather and terrain throughout Taiwan, the profiles and overall quality of teas grown there are rather unpredictable and can change dramatically from season to season.</string>
    <string name="ot_today_2">Although the cultivation of oolong tea has spread through various parts of Asia and all the way to India and Nepal in the past decade, the best oolongs today still tend to come from the Anxi and Fujian regions of China or Taiwan and are still best enjoyed using the methods that were crafted during its early inception.</string>
    <string name="what_is_green_tea_1">Green tea, also known as unoxidized tea, is made solely from the leaves of the camellia sinensis plant. The leaves are plucked, slightly withered, then immediately cooked to preserve the green quality and prevent oxidization. As a result of these methods, green teas have a much higher concentration of chlorophyll, polyphenols, and antioxidants than other tea types. The growing conditions for green tea can be broken down between two different types: sun-grown and shade-grown. The leaves are generally harvested three times a year with the first flush producing the highest quality leaves. The heating process differs greatly depending on the region and the tea maker’s techniques.</string>
    <string name="what_is_green_tea_2">Some of the mainstream methods of manufacturing green tea include:</string>
    <string name="what_is_green_tea_3">Pan Firing - Chinese green teas are often pan or wok roasted to neutralize the natural enzymes then dried, which generally results in a pale green color such as our Dragonwell. Steaming – In general, most Japanese green teas are quickly deep steamed resulting in a bright green infusion.</string>
    <string name="gt_history_1">Although written records trace the cultivation of green tea as far back as the Han Dynasty, when its primary use was medicinal, it wasn’t until China’s early Tang Dynasty that we hear of green tea being consumed for pleasure. During this time, green tea was only distributed in compressed cakes for easy transport.</string>
    <string name="gt_history_2">During the Tang Dynasty, there was a groundbreaking book written about the art of green tea drinking called the “The Classic of Tea” or “Cha Jing” by Lu Yu. It is considered one of the most important books of its time because it was one of the first all-inclusive explorations of green tea culture as a whole. It was also during this time that the formal tea ceremony came into being; a ritual, in part due to the tools necessary for preparation, accessible only to the wealthy elite. Because of this, green tea consumption became a symbol of status in society.</string>
    <string name="gt_today_1">While green tea has been consumed longer than any other variant of the camellia sinensis plant, the ways in which it is processed haven’t really changed. In many tea producing countries, green teas are still hand-harvested and hand-shaped, and in some cases with the help of very simple age-old machinery that has been passed down from generation to generation. The ways in which it is consumed, however, have changed drastically.</string>
    <string name="gt_today_2">It wasn’t until the late 19th century that green tea made its way into European and more western cultures. Until the invention of the clipper ship, western cultures were only familiar with black teas, which were the result of freshly harvested green teas that were usually transported via camelback for months at a time by traveling merchants.</string>
    <string name="gt_today_3">These merchants would set up camp night after night, exposing the tea to their nearby campfires, therefore permeating the leaves and giving them a more charred appearance and taste. With the invention of the clipper ships, teas could be transported in less than half the time, allowing them to arrive in a more preserved and unprocessed state. This new method of transport revolutionized the way tea, and green tea, in particular, were perceived and experienced forever. Today, green tea can be found everywhere in the mainstream marketplace in forms from loose leaf to powdered (known as matcha), and in other consumables, such as baked goods and breath fresheners.</string>
    <string name="what_is_red_tea_1">Black tea, also known as “red tea” in China for its rich, reddish infusion, is unique in that it is comprised of two different forms of the camellia sinensis plant: camellia sinensis sinensis and camellia sinensis assamica. Camellia Sinensis Sinensis yields shorter leaves and is primarily used in China and other neighboring East Asian countries. Camellia Sinensis Assamica has larger leaves and is used in parts of India and Sri Lanka. Dry black tea leaves are 100% oxidized, leaving them with a blackened color, thus earning its namesake. While the method in which it is produced varies from region to region, the process always involves withering, rolling, oxidization, and drying. There are two primary methods of processing the leaves before they are graded:</string>
</resources>